--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "@types/jquery": "^3.5.14",
+    "canvas-confetti": "^1.2.0",
+    "console": "^0.7.2",
+    "jquery": "^3.6.1"
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/canvas-confetti": "^1.0.0",
+    "@types/node": "^18.11.9",
     "@types/snowpack-env": "^2.3.3",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
